# temperature_ros2

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/communication_robot/lib/communication_robot/: hello_node  temperature_node
install/communication_robot/share/communication_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_first_package/lib/my_first_package/: talker
install/my_first_package/share/my_first_package/: package.sh  package.xml
install/temperature_publisher/lib/temperature_publisher/: temperature_node
install/temperature_publisher/share/temperature_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/calcule_node/: package.xml  setup.cfg  setup.py
src/calcule_node/calcule_node/: calcule_server.py
src/calcule_srv/: CMakeLists.txt  package.xml
src/communication_robot/: setup.cfg  setup.py
src/my_first_package/: CMakeLists.txt  setup.py
src/my_first_package/my_first_package/: calcule_service.py
src/temperature_publisher/: package.xml  setup.cfg  setup.py
src/temperature_publisher/temperature_publisher/: temperature_node.py
